# SENSE

./: LICENSE  Readme.md
localization/: Readme.md
localization/ekf_localization/: CMakeLists.txt  package.xml
localization/ekf_localization/launch/: sense_localization.launch
localization/launch_loc/: CMakeLists.txt  package.xml
localization/launch_loc/launch/: loc_box.launch
localization/swiftnav_piksi/: CMakeLists.txt  README.md  package.xml
localization/swiftnav_piksi/launch/: swiftnav_piksi.launch
localization/xsens_driver/launch/: xsens_driver.launch  xsens_driver_config.launch
localization/xsens_driver/nodes/: mtnode.py
navigation/: Readme.md
navigation/custom_msgs/: CMakeLists.txt  package.xml
navigation/custom_msgs/msg/: FloatStamped.msg
navigation/launch_nav/: CMakeLists.txt  package.xml
navigation/launch_nav/launch/: navigation.launch
navigation/nav_ekf_localization/: CMakeLists.txt  package.xml
navigation/nav_ekf_localization/launch/: sense_localization.launch
navigation/razor_imu_9dof/: CMakeLists.txt
navigation/razor_imu_9dof/config/: my_razor.yaml
navigation/razor_imu_9dof/launch/: razor-pub.launch
navigation/razor_imu_9dof/nodes/: imu_node.py  imu_node_antigo.py
navigation/razor_imu_9dof/src/Razor_AHRS/: Razor_AHRS.ino
navigation/rc/: CMakeLists.txt  package.xml
navigation/rc/cfg/: rc.yaml
navigation/rc/firmware/rc_ino/: rc_ino.ino
navigation/rc/launch/: rc.launch
navigation/rc/src/: rc.py
navigation/roboteq/roboteq_driver/include/roboteq_driver/: channel.h
navigation/roboteq/roboteq_driver/launch/: sense.launch
navigation/roboteq/roboteq_driver/mbs/: script.hex  script.mbs
navigation/roboteq/roboteq_driver/src/: channel.cpp  driver.cpp
navigation/roboteq/roboteq_rules/: 99-roboteq.rules
navigation/transforms/: package.xml
navigation/ublox/ublox_gps/config/: SENSE-gmouse.yaml
navigation/ublox/ublox_gps/launch/: ublox_device.launch
navigation/utils_lib/: CMakeLists.txt  package.xml
navigation/utils_lib/include/: console_log.h  diagnostic_tools.h  utils_cras.h
navigation/utils_lib/src/: console_log.cpp  diagnostic_tools.cpp  utils_cras.cpp
navigation/velocity_manager/: CMakeLists.txt  package.xml
navigation/velocity_manager/cfg/: twist2thrust.yaml  velocity_priority.yaml
navigation/velocity_manager/include/: twist2thrust_node.h
navigation/velocity_manager/launch/: twist2thrust.launch  velocity_priority.launch
navigation/velocity_manager/libs/include/: kinematics.h  twist2thrust.h
navigation/velocity_manager/libs/src/: kinematics.cpp  twist2thrust.cpp
navigation/velocity_manager/src/: twist2thrust_node.cpp  velocity_priority.cpp
perception/: Readme.md
perception/launch_perc/: CMakeLists.txt  package.xml
perception/launch_perc/cfg/: global_parameters.yaml
perception/launch_perc/launch/: perc_box.launch
perception/mynteye_wrapper_d/: CMakeLists.txt
