<?xml version="1.0"?>
<package>
  <name>launch_pkg</name>
  <version>0.0.0</version>
  <description>The launch_pkg package</description>

  <maintainer email="daniel.f.campos@inesctec.pt">Daniel Campos</maintainer>
  <author email="daniel.f.campos@inesctec.pt">Daniel Campos</author> 

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
