<package>
  <name>rc</name>
  <version>1.2.0</version>
  <description>
    RC Controller
  </description>


  <maintainer email="renato.j.silva@inesctec.pt">Renato Silva</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>python-serial</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>



</package>


