<?xml version="1.0"?>

<package>
  <name>velocity_manager</name>
  <version>0.0.1</version>
  <description>The velocity_manager package</description>

  <author email="daniel.f.campos@inesctec.pt">Daniel Campos</author> 
  <maintainer email="daniel.f.campos@inesctec.pt">Daniel Campos</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roboteq_msgs</build_depend>
  <build_depend>utils_lib</build_depend>

  <run_depend>custom_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend> 
  <run_depend>roboteq_msgs</run_depend>
  <run_depend>utils_lib</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
